--- a/Blog/pom.xml
+++ b/Blog/pom.xml
@@ -126,7 +126,17 @@
             <version>3.2.10.RELEASE</version>
             <type>jar</type>
             <scope>compile</scope>
-        </dependency>                        
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-aws-context</artifactId>
+            <version>2.0.0.RELEASE</version>
+        </dependency> 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-aws-jdbc</artifactId>
+            <version>2.0.0.RELEASE</version>
+        </dependency>   
     </dependencies>
 
     <build>
